paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_4b/sample_005/target.compile.log
error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_4b/sample_005/target.rs:63:14
   |
63 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error[E0596]: cannot borrow `a.v` as mutable, as `a` is not declared as mutable
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_4b/sample_005/target.rs:78:14
   |
78 |     fill_vec(a.v.as_mut().unwrap(), a.n, 1.0);
   |              ^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
64 |     let mut a = new_vector(16);
   |         +++

error[E0596]: cannot borrow `b.v` as mutable, as `b` is not declared as mutable
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_4b/sample_005/target.rs:79:14
   |
79 |     fill_vec(b.v.as_mut().unwrap(), b.n, 100.0);
   |              ^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
65 |     let mut b = new_vector(16);
   |         +++

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0596.
For more information about an error, try `rustc --explain E0277`.